examples/failing/varargs.cz
let example = fn(...args) {
    print(string(args));
};

let withOtherArgs = fn(foo, bar, ...rest) {
    print("foo", foo);
    print("bar", bar);
    print("rest", rest.join(", "));
};
